refactor(package-001) : 모듈 및 패키지 재구성 (동작 방식 변경하기 위한 밑작업)